--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
+    <link rel="stylesheet" href="/src/index.css">
+
     <title>Yai Rak Café</title>
   </head>
   <body>
